--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 </head>
 
 <body>
-  <audio class="audio" src="/forreston_birds.ogg" controls loop autoplay></audio>
+  <audio class="audio" controls loop autoplay>
+    <source src="/forreston_birds.ogg" type="audio/ogg">
+    <source src="/forreston_birds.wav" type="audio/wav">
+  </audio>
 </body>
 
 </html>
