--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <body>
   <audio class="audio" controls loop autoplay>
+    <source src="/forreston_birds.mp3" type="audio/mp3">
     <source src="/forreston_birds.ogg" type="audio/ogg">
     <source src="/forreston_birds.wav" type="audio/wav">
   </audio>
