--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     .audio {
       display: block;
       position: fixed;
+      top: 0;
       right: 0;
-      bottom: 0;
     }
   </style>
 </head>
